Fix project build.